--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ TODO
     <title>leontrolski - index</title>
     <style>
         body {margin: 5% auto; background: #fff7f7; color: #444444; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.8; max-width: 63%;}
-        @media screen and (max-width: 800px) {body {font-size: 14px; line-height: 1.4; max-width: 90%;}}
+        @media screen and (max-width: 800px) {body {font-size: 14px; line-height: 1.6rem; max-width: 90%;}}
         code {background: #f0f0f0;}
         a {border-bottom: 1px solid #444444; color: #444444; text-decoration: none;}
         a:hover {border-bottom: 0;}
@@ -37,7 +37,7 @@ TODO
         <div><code><a href="#what-ifs">What ifs</a></code></div>
         <div><code><a href="#cycling">Cycling</a></code></div>
         <div><code><a href="#other">Other</a></code></div>
-        <div><code><a href="#gists">Github gists</a></code></div>
+        <div><code><a href="#gists">Github gists/stars</a></code></div>
         <div><code><a href="#projects">Github projects</a></code></div>
         <div><code><a href="#game">Blocks game</a></code></div>
     </div>
@@ -107,7 +107,11 @@ TODO
     </p>
     <br>
     <p id="gists">
-        Random <b><a href="https://gist.github.com/leontrolski">gists</a></b>.
+        <b>Github gists/stars</b>.
+        <ul>
+            <li>Random <a href="https://gist.github.com/leontrolski">gists</a></li>
+            <li>Useful <a href="my-stars.html">stars</a></li>
+        </ul>
     </p>
     <br>
     <p id="projects">
