--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
 <!--
 TODO
 - testing React perfomance with and without global state (and with immer) and with Recoil. Test with 1000s of x, y coordinate boxes
-- microservice middleground - see WIP
 - can your type system do this? TypeScript
 - ORM critiques, SQLAlchemy and preventing magic objects leaking out + can your ORM do this?
-- popper and agile DOI:10.1007/11787181_26
-- political theories and team styles - strong man theory
 - typed lambda calculus
 - ask someone about where 1 + 1 = 2 is a proof - https://math.stackexchange.com/questions/4410936/does-a-particular-statement-in-lambda-calculus-count-as-a-proof
-- the energy industry and paying for stuff - insanity of WHD
-- incidental complexity and caching
  -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
@@ -33,6 +28,7 @@ TODO
         <div><code><a href="#database-tips">Database tips</a></code></div>
         <div><code><a href="#minimal-versions">Minimal versions</a></code></div>
         <div><code><a href="#cs-essentials">Computer science essentials</a></code></div>
+        <div><code><a href="#high-level">High level programming thoughts</a></code></div>
         <div><code><a href="#coding-bits-and-bobs">Python/Javscript bits and bobs</a></code></div>
         <div><code><a href="#what-ifs">What ifs</a></code></div>
         <div><code><a href="#cycling">Cycling</a></code></div>
@@ -70,16 +66,22 @@ TODO
         </ul>
     </p>
     <br>
+    <p id="high-level">
+        <b>High level</b> thoughts on professional programming.
+        <ul>
+            <li><a href="cmd-click-manifesto.html">The CMD-click manifesto</a></li>
+            <li><a href="mostly-pointless.html">Stop doing OO so much</a></li>
+            <li>Monolith? Microservices? <a href="manipleservices.html">Manipleservices</a></li>
+        </ul>
+    </p>
     <p id="coding-bits-and-bobs">
         <b>Python/JavaScript/TypeScript</b> and bobs.
         <ul>
-            <li><a href="cmd-click-manifesto.html">The CMD-click manifesto</a></li>
             <li>mypyc is <a href="mypyc-quick.html">quick</a></li>
             <li>Useful <a href="pytest-helpful.html">pytest</a> plugins</li>
             <li><a href="strongly-typed-http.html">Strongly type</a> your Web 1.0 interfaces</li>
             <li>Python <a href="virtualenvs-for-node-devs.html">virtualenvs</a> for Node devs</li>
             <li>Stop doing <a href="sane-config.html">mad config</a></li>
-            <li>While you're there, just <a href="mostly-pointless.html">stop doing OO so much</a></li>
             <li>A <a href="recursing-with-yield.html">tiny</a> bit about recursing with the yield statement</li>
             <li>I can never remember how to <a href="git-bisect.html">git bisect</a>, or <a href="git-rebase-diff.html">git diff after a rebase</a></li>
             <li><a href="semi-isomorphic.html">Evolving</a> backend → frontend rendered Python/JS apps with dnjs</li>
