--- a/manipleservices.html
+++ b/manipleservices.html
@@ -12,7 +12,7 @@
             @media screen and (max-width: 1000px) {#left{display:none;}}
             pre {width: 100%;background-color:white;line-height:1.3rem;padding:1rem;}
             a {border-bottom: 1px solid #444444; color: #444444; text-decoration: none; text-shadow: 0 1px 0 #ffffff; }
-            a:hover {border-bottom: 0;}
+            a:hover {border-bottom: 1px solid #44444400;}
             .inline {background: #b3b2b226; padding-left: 0.3em; padding-right: 0.3em; white-space: nowrap;}
             .georgian {font-family: Georgia, serif;}
             blockquote {font-style: italic;color:black;background-color:#f2f2f2;padding:2em;}
