--- a/my-stars.html
+++ b/my-stars.html
@@ -45,6 +45,7 @@
     <ul>
         <li><a href="https://github.com/jiffyclub/snakeviz">snakeviz</a> - flame graph profiling.</li>
         <li><a href="https://github.com/joerick/pyinstrument">pyinstrument</a> - runtime profiling</li>
+        <li><a href="https://github.com/plasma-umass/scalene">scalene</a> - nouveau profiling hotness</li>
         <li><a href="https://github.com/qntm/greenery">greenery</a> - determine the minimal possible regex/regex
             equality.
         </li>
@@ -54,8 +55,9 @@
         <li><a href="https://github.com/0b01001001/spectree">spectree</a> - FastAPI for Flask.</li>
         <li><a href="https://github.com/pantsbuild/pex">pex</a> - bundle Python programs.</li>
         <li><a href="https://github.com/nanne-aben/strictly_typed_pandas">Strictly typed Pandas</a>.</li>
+        <li><a href="https://github.com/annotated-types/annotated-types">Meta Pydantic</a>.</li>
         <li><a href="https://github.com/cvxpy/cvxpy">Convex Optimization</a>.</li>
-        <li><a href="https://github.com/Fatal1ty/mashumaro">mashumaro</a> - fast dataclass serialization.</li>
+        <li><a href="https://github.com/Fatal1ty/mashumaro">mashumaro</a> - fast dataclass serialization - probably not relevant since Pydantic speedups.</li>
     </ul>
     <h2 id="developer-tools">Developer tools</h2>
     <ul>
