--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@ TODO
         I'm <b>Oliver Russell</b>, a Python dev (amongst other things) based in London, reach me at ojhrussell[at]gmail.com, subscribe via <a href="https://leontrolski.github.io/leontrolski.rss">rss</a>, read my <a href="oliver-russell-cv.pdf">CV</a>.
     </p>
     <br>
+    <p>
+        ✨ New! ✨
+        <ul>
+            <li><a href="https://github.com/leontrolski/isjsonschemasubset">isjsonschemasubset</a></li>
+        </ul>
+    </p>
+    <br>
     <div>
         <div><code><a href="#database-tips">Database tips</a></code></div>
         <div><code><a href="#minimal-versions">Minimal versions</a></code></div>
@@ -126,6 +133,7 @@ TODO
     <p id="projects">
         Here are some of my <b>projects</b>, none of them are particularly prod-ready, just things that have scratched various itches over the years.
         <ul>
+            <li><a href="https://github.com/leontrolski/isjsonschemasubset">isjsonschemasubset</a> - does what it says on the tin</li>
             <li><a href="https://github.com/leontrolski/sqlski">sqlski</a> - postgres-side nesting of data for Python</li>
             <li><a href="https://github.com/leontrolski/dnjs">dnjs</a> - a Python interpreter for a useful subset of JS</li>
             <li><a href="https://github.com/leontrolski/immerframe">immerframe</a> - a neat way to make deep immutable changes in Python with structural sharing</li>
