--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ TODO
         ✨ New! ✨
         <ul>
             <li><a href="https://github.com/leontrolski/isjsonschemasubset">isjsonschemasubset</a></li>
+            <li><a href="https://stepping.site">stepping</a></li>
         </ul>
     </p>
     <br>
@@ -133,6 +134,7 @@ TODO
     <p id="projects">
         Here are some of my <b>projects</b>, none of them are particularly prod-ready, just things that have scratched various itches over the years.
         <ul>
+            <li><a href="https://stepping.site">stepping</a> - incremental view maintenance for application developers</li>
             <li><a href="https://github.com/leontrolski/isjsonschemasubset">isjsonschemasubset</a> - does what it says on the tin</li>
             <li><a href="https://github.com/leontrolski/sqlski">sqlski</a> - postgres-side nesting of data for Python</li>
             <li><a href="https://github.com/leontrolski/dnjs">dnjs</a> - a Python interpreter for a useful subset of JS</li>
