Add upset plots

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ TODO
     <p id="coding-bits-and-bobs">
         <b>Python/JavaScript/TypeScript</b> and bobs.
         <ul>
+            <li>UpSet plots are <a href="upset.html">useful</a></li>
             <li>mypyc is <a href="mypyc-quick.html">quick</a></li>
             <li>Useful <a href="pytest-helpful.html">pytest</a> plugins</li>
             <li><a href="strongly-typed-http.html">Strongly type</a> your Web 1.0 interfaces</li>
