--- a/upset.html
+++ b/upset.html
@@ -13,8 +13,8 @@
             .inline {background: #b3b2b226; padding-left: 0.3em; padding-right: 0.3em; white-space: nowrap;}
             blockquote {font-style: italic;color:black;background-color:#f2f2f2;padding:2em;}
             details {border-bottom:solid 5px gray;}
-            img{max-width:30rem;box-shadow:0 0 5px 0 gray;}
-            .overflow{overflow-x: scroll;max-width:30rem;}
+            img{max-width:30rem;}
+            .overflow{overflow-x: scroll;max-width:30rem;box-shadow:0 0 5px 0 gray;}
         </style>
         <link href="https://unpkg.com/prism-themes@1.4.0/themes/prism-vs.css" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.20.0/components/prism-core.min.js"></script>
