--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ TODO
     <p id="database-tips">
         Handy <b>database tips</b>. <em>According to Google, these are way more interesting than anything else here</em>.
         <ul>
-            <li>SQLAlchemy <a href="sqlalchemy-relationships.html">relationship loading</a> techniques with examples</li>
+            <li>SQLAlchemy relationship loading techniques with examples <a href="sqlalchemy-relationships.html">for v1</a>, <a href="sqlalchemy-relationships-2.html">for v2</a></li>
             <li>Everyone should use <a href="postgres-advisory-locks.html">postgres advisory locks</a>!</li>
             <li>Don't get bitten by missing <a href="foreign-key-indexes.html">foreign key indexes</a></li>
         </ul>
