--- a/my-stars.html
+++ b/my-stars.html
@@ -30,7 +30,7 @@
         <li><a href="https://github.com/tc39/proposal-temporal">Temporal</a> - better datetimes for JavaScript, coming
             natively to browsers.</li>
         <li><a href="https://github.com/Effect-TS/schema">Effect-TS</a> - Pydantic for TypeScript, maybe better than
-            <code>io-ts</code>?
+            <code>io-ts</code>? See also <a href="https://github.com/colinhacks/zod">zod</a>, <a href="https://github.com/trpc/trpc">trpc</a>.
         </li>
         <li><a href="https://github.com/tc39/proposal-type-annotations">Proposal</a> to have erasable type annotations
             supported natively in the browser.</li>
@@ -40,9 +40,12 @@
             no
             VDOM.</li>
         <li><a href="https://github.com/mapbox/flamebearer">flamebearer</a> - flame graph profiling.</li>
+        <li><a href="https://github.com/shoelace-style/shoelace">shoelace</a> - nice looking frontend component library.</li>
+        
     </ul>
     <h2 id="python">Python</h2>
     <ul>
+        <li><a href="https://github.com/astral-sh/ruff">ruff</a> - nouveau linting a la flake8.</li>
         <li><a href="https://github.com/jiffyclub/snakeviz">snakeviz</a> - flame graph profiling.</li>
         <li><a href="https://github.com/joerick/pyinstrument">pyinstrument</a> - runtime profiling</li>
         <li><a href="https://github.com/plasma-umass/scalene">scalene</a> - nouveau profiling hotness</li>
@@ -53,6 +56,7 @@
             tests.
         </li>
         <li><a href="https://github.com/0b01001001/spectree">spectree</a> - FastAPI for Flask.</li>
+        <li><a href="https://github.com/gukoff/dtparse">dtparse</a> - example PyO3 usage (Rust Python wrapper).</li>
         <li><a href="https://github.com/pantsbuild/pex">pex</a> - bundle Python programs.</li>
         <li><a href="https://github.com/nanne-aben/strictly_typed_pandas">Strictly typed Pandas</a>.</li>
         <li><a href="https://github.com/annotated-types/annotated-types">Meta Pydantic</a>.</li>
@@ -64,6 +68,7 @@
         <li><a href="https://github.com/swimmio/docs.swimm.io">swimm.io</a> - funky developer docs.</li>
         <li><a href="https://github.com/Wilfred/difftastic">difftastic</a> - nice diff tool.</li>
         <li><a href="https://github.com/gnab/remark">remark</a> - easy Markdown powerpoints.</li>
+        <li><a href="https://github.com/marimo-team/marimo">marimo</a> - alternative to Jupyter notebooks.</li>
         <li><a href="https://github.com/apache/superset">superset</a> - dashboard builder builder and in-browser SQL
             IDE.
         </li>
@@ -71,6 +76,7 @@
     <h2 id="sql-postgres">SQL/Postgres</h2>
     <ul>
         <li><a href="https://github.com/szarnyasg/gql-sql-pgq-pointers">Graph Queries</a> are coming to ANSI SQL.</li>
+        <li><a href="https://github.com/dbcli/pgcli">pgcli</a> alternative to psql.</li>
         <li><a href="https://github.com/CrunchyData/postgres-operator">Postgres++ for Kubernetes</a> - probably a good
             starting point for backups/connection pooling etc.</li>
         <li><a href="https://github.com/zombodb/zombodb">Postgres + Elasticsearch</a>.</li>
@@ -91,6 +97,11 @@
         <li><a href="https://github.com/mit-pdos/noria">noria</a> - <a href="https://materialize.io">materialize.io</a>
             for
             MySQL applications.</li>
+    </ul>
+    <h2 id="other">Other</h2>
+    <ul>
+        <li><a href="https://github.com/Audio-AGI/AudioSep">AudioSep</a> - split audio files into stems.</li>
+        <li><a href="https://github.com/CatalaLang/catala">catala</a> - law as code.</li>
     </ul>
 </body>
 
