--- a/my-stars.html
+++ b/my-stars.html
@@ -75,6 +75,7 @@
     </ul>
     <h2 id="sql-postgres">SQL/Postgres</h2>
     <ul>
+        <li><a href="https://github.com/peterldowns/pgtestdb">Really quick Postgres test dbs</a>.</li>
         <li><a href="https://github.com/szarnyasg/gql-sql-pgq-pointers">Graph Queries</a> are coming to ANSI SQL.</li>
         <li><a href="https://github.com/dbcli/pgcli">pgcli</a> alternative to psql.</li>
         <li><a href="https://github.com/CrunchyData/postgres-operator">Postgres++ for Kubernetes</a> - probably a good
