--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ TODO
     <p>
         ✨ New! ✨
         <ul>
+            <li><a href="https://github.com/leontrolski/pgtestdbpy">pgtestdbpy</a></li>
             <li><a href="https://github.com/leontrolski/isjsonschemasubset">isjsonschemasubset</a></li>
             <li><a href="https://stepping.site">stepping</a></li>
         </ul>
