--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ TODO
     <p id="other">
         <b>Other junk</b>.
         <ul>
+            <li>I played some <a href="https://www.youtube.com/watch?v=bAYo9wrLYN8">double bass</a></li>
             <li><a href="consciousness.html">Summary</a> of the book "Consciousness and the Social Brain"</li>
             <li>Karl Popper essay - <a href="popper-reality.html">Ideal and reality in society</a></li>
             <li>Check out my weird <a href="https://soundcloud.com/leontrolski">music</a></li>
